Refactored `projects/targets` controller to return the correct `expiration_time` field returned from CLI.  Cleaned up CSS for `session-details-info` attribute and wrapped `@model.displayname` in span tag.
✅ Closes: https://hashicorp.atlassian.net/browse/ICU-10487

--- a/ui/desktop/app/styles/app.scss
+++ b/ui/desktop/app/styles/app.scss
@@ -505,14 +505,7 @@ $chevron-down: url("data:image/svg+xml;utf-8,<svg viewBox='0 0 24 24' fill='%231
 .session-details-info {
   display: flex;
   align-items: center;
-
-  > * {
-    margin-right: 1rem;
-  }
-
-  .hds-badge {
-    margin-left: 1rem;
-  }
+  gap: 1rem;
 }
 
 .target-details-header {
